--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/inter": "^5.0.16",
+    "@fontsource-variable/nunito": "^5.0.17",
+    "@fontsource-variable/space-grotesk": "^5.0.16",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
